# filtering-cpp

./: .gitignore  CMakeLists.txt  README.md
cmake/: filteringConfig.cmake.in
debian/: LICENSE  changelog
include/: filter.hpp  matplotlibcpp.h  smoothing.hpp
include/filtering/: filter.hpp  multistream.hpp
src/: example_filtering.cpp  example_high_low_pass.cpp  example_multi.cpp  plotting_example.cpp  smoothing_example.cpp
